--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ h2 {
   justify-content: center;
   align-items: center;
   position: relative;
-  box-shadow: 1px 1px 100px rgba(0, 0, 0, 0.5);
 }
 
 .game {
@@ -37,10 +36,10 @@ h2 {
 
 .game__player-item {
   width: 25rem;
-  height: 30rem;
+  height: 29rem;
   text-align: center;
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
+  border-bottom-left-radius: 20px;
+  border-top-left-radius: 20px;
 }
 
 .game__player-header {
@@ -52,8 +51,8 @@ h2 {
 .game__player-item:nth-child(2) {
   border-bottom-left-radius: 0px;
   border-top-left-radius: 0px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .current-scorepoints {
@@ -105,7 +104,7 @@ h2 {
 
 .btn-newgame {
   position: absolute;
-  top: 35px;
+  top: 7%;
   left: 50%;
   transform: translateX(-50%);
 }
